# hautomate

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: build.yml
example/custom_components/: README.md
example/custom_components/hautomate/: __init__.py  const.py  manifest.json
example/standalone/: README.md
hautomate/: __init__.py  api.py  app.py  check.py  context.py  core.py  enums.py  errors.py  events.py  intent.py  settings.py
hautomate/apis/: __init__.py
hautomate/apis/homeassistant/: checks.py  compat.py  enums.py  events.py  helpers.py  homeassistant.py  settings.py  ux.py
hautomate/apis/moment/: __init__.py  checks.py  events.py  moment.py  settings.py
hautomate/apis/trigger/: __init__.py  trigger.py
hautomate/util/: async_.py
tests/: fixtures.py  test_config.py  test_core.py
tests/_test_apps/: _hidden_app.py  _invalid_app.py  _naughty_app.py  sample_app.py
tests/_test_apps/complex_app/: complex_app.py
tests/integration/: test_core.py
tests/unit/: test_api.py  test_app.py  test_check.py  test_config.py  test_context.py  test_core.py  test_hass.py  test_intent.py  test_moment.py  test_trigger.py  test_util_async.py
