[tool.poetry]
name = "hautomate"
version = "0.1.0"
description = "Task automation library focused on home automation."
authors = ["SupahNoob <_@boonhap.us>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"
httpx = "^0.14.1"
async-timeout = "^3.0.1"
websockets = "^8.1"
astral = "^2.2"
pydantic = "^1.6.1"
databases = {extras = ["postgresql"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
ward = "^0.48.0-beta.0"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
