[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "hautomate"
version = "0.1.0"
description = "Task automation library focused on home automation."
authors = ["SupahNoob <_@boonhap.us>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pendulum = "^2.1.2"
httpx = "^0.14.1"
async-timeout = "^3.0.1"
websockets = "^8.1"
astral = "^2.2"
pydantic = "^1.6.1"
databases = {extras = ["postgresql"], version = "^0.3.2"}


coverage = {extras = ["toml"], version = "^5.2", optional = true}
ward = {version = "^0.48.0-beta.0", optional = true}

[tool.poetry.dev-dependencies]
ipykernel = "^5.3.4"
flake8 = "^3.8.3"
coverage = {extras = ["toml"], version = "^5.2"}
nox = "^2020.5.24"
ward = "^0.48.0-beta.0"

# [tool.poetry.extras]
# test = [
#     "coverage",
#     "nox",
#     "ward",
# ]

[tool.coverage.run]
branch = true
source = [
    "hautomate",
]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
#     "__all__",
    "import",
    "_log = .*"
#     "except ImportError:",
#     "pass",
#     "# pragma: nocover",
#     "# pragma: no cover",
#     "# pragma: nobranch",
#     "# pragma: no branch",
]

[tool.ward]
path = [
    "tests"
]
