[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "hautomate"
version = "0.1.1"
description = "Task automation library focused on home automation."
authors = ["boonhapus <_@boonhap.us>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
pendulum = "^2.1.2"
httpx = "^0.14.1"
async-timeout = "^3.0.1"
websockets = "^8.1"
astral = "1.10.1"
pydantic = "^1.6.1"

# extras to support APIs
homeassistant = {version = "^0.115.3", optional = true}

# not sure why, but Github Action won't install dev-dependencies, so we do this for now.
coverage = {extras = ["toml"], version = "^5.2", optional = true}
ward = {version = "^0.48.0-beta.0", optional = true}

[tool.poetry.dev-dependencies]
ipykernel = "^5.3.4"
flake8 = "^3.8.3"
coverage = {extras = ["toml"], version = "^5.2"}
nox = "^2020.5.24"
ward = "^0.48.0-beta.0"
databases = {extras = ["postgresql"], version = "^0.3.2"}

[tool.poetry.extras]
homeassistant = ["homeassistant"]
test = [
    "coverage",
    "nox",
    "ward",
    "homeassistant"
]

[tool.coverage.run]
branch = true
source = [
    "hautomate",
]

[tool.coverage.report]
precision = 2
show_missing = true
omit = [
    "*/__init__.py"
]
exclude_lines = [
#     "__all__",
    "import",
    "_log = .*",
    "__init__",
    "__repr__",
    "__str__",
#     "except ImportError:",
    "pass",
#     "# pragma: nocover",
#     "# pragma: no cover",
#     "# pragma: nobranch",
#     "# pragma: no branch",
]

[tool.ward]
path = [
    "tests"
]
